--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <!-- Add other specializations -->
       </ul>
     </section>
+
+    <section id="best_team">
+      <h2>La meilleure équipe d’étudiants</h2>
+      <ul>
+        <li><a href="https://github.com/DalyDrameESGI">Daly DRAME</a></li>
+        <li><a href="https://github.com/Doll293">Hugo Van</a></li>
+      </ul>
+    </section>
     
     <section id="address">
       <h2>Adresses</h2>
