ticket_2 traité via branch

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     <section id="specializations">
       <h2>Spécialisations</h2>
       <ul>
-        <li>Informatique & Réseaux</li>
-        <li>Développement Web & Mobile</li>
+        <li>Architecture des Logiciels</li>
+        <li>Mobilité et Objets Connectés</li>
+        <li>Intelligence Artificielle et Big Data</li>
+        <li>Ingénieurie de la Blockchain</li>
+        <li>Ingénieurie de u Web</li>
+        <li>Ingénieurie de la Réalité Virtuelle et Jeux Vidéo</li>
+        <li>Système, Réseaux et Cloud Computing</li>
         <li>Sécurité Informatique</li>
+        <li>Management et Conseil en Systèmes d'Information</li>
         <!-- Add other specializations -->
       </ul>
     </section>
@@ -36,6 +42,15 @@
       <ul>
         <li><a href="https://github.com/DalyDrameESGI">Daly DRAME</a></li>
         <li><a href="https://github.com/Doll293">Hugo Van</a></li>
+      </ul>
+    </section>
+
+    <section id="food_address">
+      <h2>Les bons restaurants autours</h2>
+      <ul>
+        <li>La Cantine Diderot - 74 Bd Diderot, 75012 Paris </li>
+        <li>Bistrot Rev’bar - 44 Bd Diderot, 75012</li>
+        <li>Le Relais Diderot - 64 Bd Diderot, 75012 Paris/li>
       </ul>
     </section>
     
