--- a/index.html
+++ b/index.html
@@ -24,10 +24,24 @@
     <section id="specializations">
       <h2>Spécialisations</h2>
       <ul>
-        <li>Informatique & Réseaux</li>
-        <li>Développement Web & Mobile</li>
+        <li>Architecture des Logiciels</li>
+        <li>Mobilité et Objets Connectés</li>
+        <li>Intelligence Artificielle et Big Data</li>
+        <li>Ingénieurie de la Blockchain</li>
+        <li>Ingénieurie du Web</li>
+        <li>Ingénieurie de la 3D et des Jeux Vidéo</li>
+        <li>Systèmes, Réseaux et Cloud Computing</li>
         <li>Sécurité Informatique</li>
-        <!-- Add other specializations -->
+        <li>Management et Conseil en Système d'Information</li>
+      </ul>
+    </section>
+
+    <section id="food_address">
+      <h2>Les bons restaurants autours</h2>
+      <ul>
+        <li>Le Relais Didarot -  64 Bd Diderot, 75012 Paris</li>
+        <li>La Cantine Diderot - 74 Bd Diderot, 75012 Paris</li>
+        <li>Bistrot Rev’bar - 44 Bd Diderot, 75012 Paris</li>
       </ul>
     </section>
 
