ticket_3 via branch 3

--- a/index.html
+++ b/index.html
@@ -53,11 +53,23 @@
         <li>Le Relais Diderot - 64 Bd Diderot, 75012 Paris/li>
       </ul>
     </section>
+
+    <section id="students_notes">
+      <h2>L’avis des élèves</h2>
+      <ul>
+        <li> Daly DRAME : Cours intensif, ça va très vite! </li>
+        <li>Hugo Van : Hugo : C'est super Git</li>
+      </ul>
+    </section>
+
+
     
     <section id="address">
       <h2>Adresses</h2>
       <ul>
         <li>242, rue du Faubourg Saint-Antoine, Paris, France</li>
+        <li>21 rue Érard, Paris, France</li>
+
       </ul>
     </section>
   </main>
